# TCGA-Data-Analyzer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Snakefile  makefile
scripts/: Snakefile
scripts/heinz-modules-snakefile/: README.txt~  Snakefile
scripts/tcga-data-preparation/: README.txt  getNormalizedResults
src/: TCGAData.cpp  TCGAData.hpp  TCGADataClusterer.hpp  TCGADataDistanceMatrixAnalyzer.cpp  TCGADataDistanceMatrixAnalyzer.hpp  TCGADataLoader.cpp  TCGADataLoader.hpp  TCGADataNormalizer.cpp  TCGADataNormalizer.hpp  clustering.cpp  clustering.hpp  command_line_processor.cpp  command_line_processor.hpp  config.hpp  correlationMatrix.cpp  correlationMatrix.hpp  dataReader.cpp  dataReader.hpp  distanceMatrix.cpp  distanceMatrix.hpp  distanceMetrics.cpp  distanceMetrics.hpp  heatMap.cpp  heatMap.hpp  hierarchical_clustering.cpp  hierarchical_clustering.hpp  k_means.cpp  k_means.hpp  main.cpp  normedSpace.hpp  normedVectorSpace.hpp  parameters.hpp  patientUnsupervisedNormalization.cpp  patientUnsupervisedNormalization.hpp  spectral_clustering.cpp  spectral_clustering.hpp  stats.cpp  stats.hpp  typedefs.hpp  unsupervisedNormalization.cpp  (+3 more)
src/TCGA-Analyzer/: TCGAData.cpp  TCGAData.hpp  TCGADataClusterer.cpp  TCGADataClusterer.hpp  TCGADataDistanceMatrixAnalyzer.cpp  TCGADataLoader.cpp  TCGADataNormalizer.cpp  typedefs.hpp
src/heinz-analyzer/: graph.cpp  graph.hpp  heinzAnalyzer.cpp  heinzAnalyzer.hpp  heinzModuleAnalyzer.cpp  heinzModuleAnalyzer.hpp  heinzOutputAnalyzer.cpp  heinzOutputAnalyzer.hpp  typedefs.hpp
src/tcga-analyzer/: TCGA-Analyzer.hpp  TCGAData.cpp  TCGAData.hpp  TCGADataClusterer.cpp  TCGADataClusterer.hpp  TCGADataDistanceMatrixAnalyzer.cpp  TCGADataDistanceMatrixAnalyzer.hpp  TCGADataLoader.cpp  TCGADataLoader.hpp  TCGADataNormalizer.cpp  TCGADataNormalizer.hpp  TCGAPatientData.cpp  TCGAPatientData.hpp  typedefs.hpp
src/tests/: clustering_test.cpp  clustering_test.hpp  correlationMatrix_test.cpp  correlationMatrix_test.hpp  dataReader_test.cpp  dataReader_test.hpp  distanceMetrics_test.cpp  distanceMetrics_test.hpp  general_test.cpp  general_test.hpp  hierarchicalClustering_test.cpp  hierarchicalClustering_test.hpp  k_means_test.cpp  k_means_test.hpp  lodePNG_test.cpp  lodePNG_test.hpp  patientUnsupervisedNormalization_test.hpp  stats_test.cpp  stats_test.hpp  unsupervisedNormalization_test.cpp  unsupervisedNormalization_test.hpp  utilities_test.cpp  utilities_test.hpp
